# code

./: 新建 文本文档.py
CSap/: 两数想成.cpp
LeetCode/: 138.复制带随机指针的链表.cpp  142.环形链表-ii.cpp  160.相交链表.cpp  206.反转链表.cpp  4.寻找两个正序数组的中位数.cpp  60.排列序列.cpp  70.爬楼梯.cpp  92.反转链表-ii.cpp  两数相加.cpp  两数组求中值.cpp  多线程.cpp
MATLAB/图片锐化/: scrip.m  yuanbinhe1.m  yuanbinhe2.m  原彬贺 542001020223.doc
MATLAB/滤波处理/: yuanbinhe.m  原彬贺 542001020223.doc
QT/QtLearn-master/: README.md
QT/build-TcpClient-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_friend.h  ui_friendlist.h  ui_movefile.h  ui_online.h  ui_privatechat.h
QT/build-TcpClient-Desktop_Qt_6_3_2_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release  ui_book.h  ui_opewidget.h  ui_sharefile.h  ui_tcpclient.h
QT/build-TcpServer-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
QT/build-TcpServer-Desktop_Qt_6_3_2_MinGW_64_bit-Release/: Makefile  Makefile.Debug  Makefile.Release  ui_tcpserver.h
QT/build-client-Desktop_Qt_6_3_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
QT/build-database-Desktop_Qt_6_3_2_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
QT/build-demo1-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  (+2 more)
c++/cmake/cmake-3.26.5-tutorial-source/Step4/: CMakeLists.txt
c++/cmake/cmake-3.26.5-tutorial-source/Step4/MathFunctions/: CMakeLists.txt
c++/cmake/cmake-3.26.5-tutorial-source/Step4/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
c++/cmake/cmake-3.26.5-tutorial-source/Step4/bulid/MathFunctions/: Makefile  cmake_install.cmake
fgpa/: 542001020223 原彬贺.rar  542001020223原彬贺.docx
小游戏/: 俩人输入1 2 4，先到达20胜利.cpp
打印文件夹/: 交通灯.docx  双面打印 fgpa.docx  计租.doc  计网.doc  赫夫曼.docx
数据结构/: 数据结构实验指导书-学生用 (1).doc
计算机组成原理/: 23_原彬贺.docx  542001020223原彬贺.doc
面试/: 未命名绘图.drawio
(+3116 files in other folders)
